# forma

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
demo/: Cargo.toml
demo/src/: main.rs  runner.rs
demo/src/demos/: circles.rs  mod.rs  spaceship.rs  svg.rs  texture.rs
docs/: code-of-conduct.md
e2e-tests/: Cargo.toml
e2e-tests/tests/: report.html  test_env.rs  tests.rs
forma/: Cargo.toml
forma/src/: consts.rs  lib.rs  path.rs  segment.rs  styling.rs
forma/src/composition/: interner.rs  layer.rs  mod.rs  state.rs
forma/src/cpu/: channel.rs  mod.rs  pixel_segment.rs  rasterizer.rs  renderer.rs
forma/src/cpu/buffer/: mod.rs
forma/src/cpu/buffer/layout/: mod.rs  slice_cache.rs
forma/src/cpu/painter/: mod.rs  styling.rs
forma/src/cpu/painter/layer_workbench/: mod.rs
forma/src/cpu/painter/layer_workbench/passes/: mod.rs  skip_fully_covered_layers.rs  skip_trivial_clips.rs  tile_unchanged.rs
forma/src/gpu/: mod.rs  style_map.rs
forma/src/gpu/conveyor_sort/: mod.rs  sort.wgsl
forma/src/gpu/painter/: mod.rs  paint.wgsl
forma/src/gpu/rasterizer/: mod.rs  rasterizer.wgsl
forma/src/gpu/renderer/: draw_texture.wgsl  mod.rs
forma/src/math/: mod.rs  point.rs  transform.rs
forma/src/utils/: extend.rs  mod.rs  order.rs  prefix_scan.rs  small_bit_set.rs
forma/src/utils/simd/: aarch64.rs  auto.rs  avx.rs  mod.rs  wasm32.rs
web/: .proxyrc.js  Cargo.toml  README.md  index.html  index.js  package.json  worker.js
web/src/: lib.rs  utils.rs
