# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
default-members = [
    "e2e-tests",
    "forma",
]
members = [
    "demo",
    "e2e-tests",
    "forma",
    "web",
]
resolver = "2"

[profile.release-with-debug-info]
inherits = "release"
debug = true

[workspace.dependencies]
anyhow = "1.0.66"
bytemuck = { version = "1.12.3", features = ["derive"] }
pollster = "0.2.5"
rand = { version = "0.8.5", features = ["small_rng"] }
wgpu = "0.14.0"
