# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck.workspace = true
clap = { version = "3.1", features = ["derive"] }
forma = { path = "../forma", features = ["gpu"], package = "forma-render"}
image = "0.23"
nalgebra = "0.31.4"
pollster.workspace = true
rand.workspace = true
svg = "0.5"
svgtypes = "0.4"
winit = "0.27.1"
wgpu.workspace = true
